--- a/src/components/home/location/style.css
+++ b/src/components/home/location/style.css
@@ -25,23 +25,37 @@
   left: 0;
   width: 340px;
   height: 210px;
-  background: rgb(15 28 47 / 30%);
   z-index: -1;
+  background: transparent;
+
   margin: 20px;
   border-radius: 5px;
 }
 .location h5 {
   font-size: 18px;
+  text-shadow: rgb(48, 46, 40) 1px 0 1px;
+
   font-weight: 500;
 }
 .location label {
-  color: #fff;
-  margin-right: 20px;
+  color: #ffffff;
+  text-shadow: rgb(48, 46, 40) 1px 0 1px;
+  margin-right: 6px;
+
   opacity: 0.8;
 }
 @media screen and (max-width: 800px) {
   .location .overlay::after {
-    width: 280px;
-    height: 170px;
+    width: 200px;
+    height: 150px;
+    /* background: rgb(15 28 47 / 30%); */
+
+  }
+  .location label {
+    color: #ffffff;
+    text-shadow: rgb(48, 46, 40) 1px 0 1px;
+    margin-right: 3px;
+  
+    opacity: 0.8;
   }
 }
